apps/my-site/my-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /site
            pathType: Prefix
            backend:
              service:
                name: my-site
                port:
                  number: 80
